--- a/project3/templates/cart.html
+++ b/project3/templates/cart.html
@@ -48,8 +48,7 @@
           </div>
         </div>
         <div class="ps-cart__total">
-          <h3>Total Price: <span> 2599.00 $</span></h3><a class="ps-btn" href="checkout.html">Process to checkout<i
-              class="ps-icon-next"></i></a>
+          <h3>Total Price: <span> {{price}} $</span></h3>
         </div>
       </div>
     </div>
