--- a/project3/templates/order.html
+++ b/project3/templates/order.html
@@ -29,7 +29,7 @@
             </table>
             <div class="ps-cart__actions">
                 <div class="ps-cart__total">
-                    <h3>Total Price: <span> 2599.00 $</span></h3>
+                    <h3>Total Price: <span>{{ price }} đ</span></h3>
                     <a class="ps-btn" href="{% url 'wrap' %}">Process to Wrap<i class="ps-icon-next"></i></a>
                 </div>
             </div>
